default-cluster-and-traefik/03-web-server-ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: web-services
  namespace: kt-crumbling-gorge
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: web1.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web1
                port:
                  number: 80
    - host: web2.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web2
                port:
                  number: 80
    - host: chisel.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: engine-chisel
                port:
                  number: 9200
